@@ -68,7 +68,7 @@ import com.openexchange.groupware.container.FolderObject;
 public class Bug31453Test extends CalDAVTest {
 
     private FolderObject publicFolder = null;
-    private String folderID = null;
+    private String publicFolderID = null;
 
     public Bug31453Test(String name) {
         super(name);
@@ -78,7 +78,7 @@ public class Bug31453Test extends CalDAVTest {
     protected void setUp() throws Exception {
         super.setUp();
         publicFolder = createPublicFolder();
-        folderID = String.valueOf(publicFolder.getObjectID());
+        publicFolderID = String.valueOf(publicFolder.getObjectID());
     }
 
     @Override
@@ -137,11 +137,11 @@ public class Bug31453Test extends CalDAVTest {
                 "END:VEVENT" + "\r\n" +
                 "END:VCALENDAR"
         ;
-        assertEquals("response code wrong", StatusCodes.SC_CREATED, super.putICal(folderID, uid, iCal));
+        assertEquals("response code wrong", StatusCodes.SC_CREATED, super.putICal(publicFolderID, uid, iCal));
         /*
          * verify appointment on server
          */
-        Appointment appointment = super.getAppointment(folderID, uid);
+        Appointment appointment = super.getAppointment(publicFolderID, uid);
         assertNotNull("appointment not found on server", appointment);
         super.rememberForCleanUp(appointment);
         assertTrue("no reminder found", appointment.containsAlarm());
@@ -149,7 +149,7 @@ public class Bug31453Test extends CalDAVTest {
         /*
          * verify appointment on client
          */
-        ICalResource iCalResource = super.get(folderID, uid, null);
+        ICalResource iCalResource = super.get(publicFolderID, uid, null);
         assertNotNull("No VEVENT in iCal found", iCalResource.getVEvent());
         assertEquals("UID wrong", uid, iCalResource.getVEvent().getUID());
         assertNotNull("No ALARM in iCal found", iCalResource.getVEvent().getVAlarm());
@@ -207,11 +207,11 @@ public class Bug31453Test extends CalDAVTest {
                 "END:VEVENT" + "\r\n" +
                 "END:VCALENDAR"
         ;
-        assertEquals("response code wrong", StatusCodes.SC_CREATED, super.putICal(folderID, uid, iCal));
+        assertEquals("response code wrong", StatusCodes.SC_CREATED, super.putICal(publicFolderID, uid, iCal));
         /*
          * verify appointment on server
          */
-        Appointment appointment = super.getAppointment(folderID, uid);
+        Appointment appointment = super.getAppointment(publicFolderID, uid);
         assertNotNull("appointment not found on server", appointment);
         super.rememberForCleanUp(appointment);
         assertTrue("no reminder found", appointment.containsAlarm());
@@ -219,7 +219,7 @@ public class Bug31453Test extends CalDAVTest {
         /*
          * verify appointment on client
          */
-        ICalResource iCalResource = super.get(folderID, uid, null);
+        ICalResource iCalResource = super.get(publicFolderID, uid, null);
         assertNotNull("No VEVENT in iCal found", iCalResource.getVEvent());
         assertEquals("UID wrong", uid, iCalResource.getVEvent().getUID());
         assertNotNull("No ALARM in iCal found", iCalResource.getVEvent().getVAlarm());
@@ -233,14 +233,14 @@ public class Bug31453Test extends CalDAVTest {
         /*
          * verify appointment on server
          */
-        appointment = super.getAppointment(folderID, uid);
+        appointment = super.getAppointment(publicFolderID, uid);
         assertNotNull("appointment not found on server", appointment);
         assertFalse("reminder found", appointment.containsAlarm());
         assertEquals("reminder minutes wrong", 0, appointment.getAlarm());
         /*
          * verify appointment on client
          */
-        iCalResource = super.get(folderID, uid, iCalResource.getETag());
+        iCalResource = super.get(publicFolderID, uid, iCalResource.getETag());
         assertNotNull("No VEVENT in iCal found", iCalResource.getVEvent());
         assertEquals("UID wrong", uid, iCalResource.getVEvent().getUID());
         assertNull("ALARM in iCal found", iCalResource.getVEvent().getVAlarm());
@@ -297,11 +297,11 @@ public class Bug31453Test extends CalDAVTest {
                 "END:VEVENT" + "\r\n" +
                 "END:VCALENDAR"
         ;
-        assertEquals("response code wrong", StatusCodes.SC_CREATED, super.putICal(folderID, uid, iCal));
+        assertEquals("response code wrong", StatusCodes.SC_CREATED, super.putICal(publicFolderID, uid, iCal));
         /*
          * verify appointment on server
          */
-        Appointment appointment = super.getAppointment(folderID, uid);
+        Appointment appointment = super.getAppointment(publicFolderID, uid);
         assertNotNull("appointment not found on server", appointment);
         super.rememberForCleanUp(appointment);
         assertTrue("no reminder found", appointment.containsAlarm());
@@ -309,7 +309,7 @@ public class Bug31453Test extends CalDAVTest {
         /*
          * verify appointment on client
          */
-        ICalResource iCalResource = super.get(folderID, uid, null);
+        ICalResource iCalResource = super.get(publicFolderID, uid, null);
         assertNotNull("No VEVENT in iCal found", iCalResource.getVEvent());
         assertEquals("UID wrong", uid, iCalResource.getVEvent().getUID());
         assertNotNull("No ALARM in iCal found", iCalResource.getVEvent().getVAlarm());
@@ -322,14 +322,14 @@ public class Bug31453Test extends CalDAVTest {
         /*
          * verify appointment on server
          */
-        appointment = super.getAppointment(folderID, uid);
+        appointment = super.getAppointment(publicFolderID, uid);
         assertNotNull("appointment not found on server", appointment);
         assertTrue("no reminder found", appointment.containsAlarm());
         assertEquals("reminder minutes wrong", 20, appointment.getAlarm());
         /*
          * verify appointment on client
          */
-        iCalResource = super.get(folderID, uid, iCalResource.getETag());
+        iCalResource = super.get(publicFolderID, uid, iCalResource.getETag());
         assertNotNull("No VEVENT in iCal found", iCalResource.getVEvent());
         assertEquals("UID wrong", uid, iCalResource.getVEvent().getUID());
         assertNotNull("No ALARM in iCal found", iCalResource.getVEvent().getVAlarm());
@@ -345,7 +345,7 @@ public class Bug31453Test extends CalDAVTest {
         Date end = TimeTools.D("next friday at 09:20");
         Appointment appointment = generateAppointment(start, end, uid, "test", "test");
         appointment.setAlarm(30);
-        appointment = create(folderID, appointment);
+        appointment = create(publicFolderID, appointment);
         /*
          * verify appointment on client
          */
@@ -365,7 +365,7 @@ public class Bug31453Test extends CalDAVTest {
         Date end = TimeTools.D("next friday at 09:20");
         Appointment appointment = generateAppointment(start, end, uid, "test", "test");
         appointment.setAlarm(30);
-        appointment = create(folderID, appointment);
+        appointment = create(publicFolderID, appointment);
         /*
          * verify appointment on client
          */
@@ -382,7 +382,7 @@ public class Bug31453Test extends CalDAVTest {
         /*
          * verify appointment on client
          */
-        iCalResource = super.get(folderID, uid, iCalResource.getETag());
+        iCalResource = super.get(publicFolderID, uid, iCalResource.getETag());
         assertNotNull("No VEVENT in iCal found", iCalResource.getVEvent());
         assertEquals("UID wrong", uid, iCalResource.getVEvent().getUID());
         assertNull("ALARM in iCal found", iCalResource.getVEvent().getVAlarm());
@@ -397,7 +397,7 @@ public class Bug31453Test extends CalDAVTest {
         Date end = TimeTools.D("next friday at 09:20");
         Appointment appointment = generateAppointment(start, end, uid, "test", "test");
         appointment.setAlarm(30);
-        appointment = create(folderID, appointment);
+        appointment = create(publicFolderID, appointment);
         /*
          * verify appointment on client
          */
@@ -414,7 +414,7 @@ public class Bug31453Test extends CalDAVTest {
         /*
          * verify appointment on client
          */
-        iCalResource = super.get(folderID, uid, iCalResource.getETag());
+        iCalResource = super.get(publicFolderID, uid, iCalResource.getETag());
         assertNotNull("No VEVENT in iCal found", iCalResource.getVEvent());
         assertNotNull("No ALARM in iCal found", iCalResource.getVEvent().getVAlarm());
         assertEquals("ALARM wrong", "-PT20M", iCalResource.getVEvent().getVAlarm().getPropertyValue("TRIGGER"));
